tdf#166210: invalidate parent's size when hiding section

Regression from commit 0c96119895b347f8eb5bb89f393351bd3c02b9f1

Change-Id: I4469749c9ff3d9fae43f00e01276c241e7c49f61
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184720
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184754